<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSessionFragment">

    <TextView
        android:id="@+id/sessionsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/addSession"
        android:textAlignment="center"
        android:textColor="@color/RED"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/sessionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sessionsTitle"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:hint="@string/sessionName" />

    <TextView
        android:id="@+id/questionsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addQuestion"
        android:layout_marginTop="30dp"
        android:text="@string/questions"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/questionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionsTitle"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp" />

    <Button
        android:id="@+id/addQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sessionName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/addQuestion" />

    <Button
        android:id="@+id/addSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionContainer"
        android:layout_alignParentStart="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/addSession" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionContainer"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/back" />

</RelativeLayout>